# xs-linting

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  test.ast
.github/workflows/: publish.yml
code_gen/pa/: index.html
code_gen/xs_bc/: index.html
code_gen/xs_mm/: index.html
dynamic/xs_op_sem/: index.html
maffs/: mkdocs.yml
maffs/docs/code_gen/: xs_mm.md
maffs/docs/dynamic/: xs_op_sem.md
maffs/docs/parsing/: xs_tokens.md
maffs/docs/static/: xs_type_chk.md  xs_type_inf.md
maffs/dynamic/: xs_op_sem.md
maffs/parsing/: xs_grammar.md  xs_grammar_sets.md  xs_keywords.md  xs_lr_automaton.md  xs_tokens.md
maffs/static/: xs_type_chk.md  xs_type_inf.md
maths/: mkdocs.yml
maths/docs/code_gen/: pa.md  xs_mm.md
maths/docs/dynamic/: xs_op_sem.md
maths/docs/parsing/: xs_grammar.md
maths/docs/static/: xs_type_chk.md
parsing/xs_grammar/: index.html
parsing/xs_keywords/: index.html
parsing/xs_tokens/: index.html
search/: search_index.json
src/: cli.rs  lint.rs  main.rs  static.rs
src/lang/: ast.rs  lexer.rs  parser.rs  span.rs
src/lint/: fmt.rs  gen_errs.rs  gen_info.rs  gen_info_from_path.rs  gen_info_from_src.rs  print_errs.rs
src/lint_old/: gen_errs.rs  gen_info.rs
src/parsing/: ast.rs  lexer.rs  parser.rs  span.rs
src/static/: info.rs  type_check.rs  xs_error.rs
src/static_old/: type_check.rs
static/xs_liveness/: index.html
static/xs_sign/: index.html
static/xs_type_chk/: index.html
static/xs_type_inf/: index.html
test_xs/: test.xs
xs_vm/xs_ops/: index.html
xs_vm/xs_rt/: index.html
(+79 files in other folders)
